# chan-benchmark

./: LICENSE  README.md  chan-benchmark.cabal  chan.csv  out.csv  stack.yaml
src/: Main.hs
